--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,6 +13,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           submodules: recursive
 
       # Runs a single command using the runners shell
