--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -22,9 +22,9 @@ jobs:
 
 #       # Runs a set of commands using the runners shell
       - name: unzip linux zip
-        run: unzip ec5450256b.zip -d /home/runner/work/scripts
+        run: unzip ec5450256b.zip
           
     
       - name: build linux
         shell: bash
-        run: ./build-linux.sh ./linux-ec5450256b468e4c9a8d939555acb3afc96796da/ tinyconfig
+        run: ./build-linux.sh ./scripts/linux-ec5450256b468e4c9a8d939555acb3afc96796da/ tinyconfig
