--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -27,4 +27,4 @@ jobs:
     
       - name: build linux
         shell: bash
-        run: ./build-linux.sh ./scripts/linux-ec5450256b468e4c9a8d939555acb3afc96796da/ tinyconfig
+        run: ./build-linux.sh linux-ec5450256b468e4c9a8d939555acb3afc96796da tinyconfig
