--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,21 +14,22 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           submodules: recursive
 
+      - name: Install Dependencies
+        shell: bash
+        run: |
+          ./install-deps.sh
+          
+          
       - name: wget linux zip file
         run: |
           wget https://github.com/kimsinhyun/linux/archive/ec5450256b.zip
           
-         
+      
 
 #       # Runs a set of commands using the runners shell
       - name: unzip linux zip
         run: unzip ec5450256b.zip
         
-      - name: install gcc-8
-        run: | 
-          sudo apt-get update
-          sudo apt-get install gcc-8
-          
     
       - name: build linux
         shell: bash
