--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -23,7 +23,7 @@ jobs:
         shell: bash
         run: |
           Submodule_commit_Num=$(git submodule status | awk '{print $1}' | cut -c -10)
-          wget https://github.com/kimsinhyun/linux/archive/$Submodule_commit_Num.zip tinyconfig
+          wget https://github.com/kimsinhyun/linux/archive/$Submodule_commit_Num.zip
           unzip $Submodule_commit_Num.zip        
     
       - name: build linux
